# citiConnect

./: .gitignore  FLOW_MAP.md  explanation.md
backend/: README.md  main.py  pyproject.toml
backend/app/api/: router.py
backend/app/api/endpoints/: admin.py  admin_jobs.py  auth.py  bookings.py  listings.py  master.py  media.py  notifications.py  users.py  wishlists.py
backend/app/core/: config.py  database.py  dependency.py  errors.py  security.py
backend/app/models/: admin_audit_log.py  base.py  booking.py  booking_idempotency.py  city.py  enums.py  listing.py  notification.py  occurrence.py  offer.py  seat_lock.py  user.py  user_offer_usage.py  venue.py  wishlist.py
backend/app/repository/: admin.py  admin_jobs.py  auth.py  booking.py  bookings.py  city.py  listing.py  listings.py  master.py  notification.py  notifications.py  users.py  venue.py  wishlist.py  wishlists.py
backend/app/schema/: admin.py  auth.py  booking.py  city.py  common.py  listing.py  media.py  notification.py  offer.py  user.py  venue.py  wishlist.py
backend/app/services/: admin.py  admin_jobs.py  auth.py  bookings.py  email.py  geo.py  geocoding.py  listing.py  listings.py  master.py  media.py  notifications.py  popularity.py  razorpay.py  scheduler.py  users.py  wishlists.py
backend/app/utils/: datetime_utils.py  pagination.py  pricing.py  seat_layout.py
backend/scripts/: contract_smoke.py
backend/tests/: test_api_service_repository_smoke.py
frontend/: package-lock.json  package.json  tailwind.config.js  update_imports.js  vite.config.js
frontend/src/: App.jsx  index.css  (+1 more)
(+127 files in other folders)
